--- a/src/app/orbeed-dashboard/orbeed-dashboard.component.html
+++ b/src/app/orbeed-dashboard/orbeed-dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
+  <h1 class="mat-h1">Dashboard of the COVID-19 Virus Outbreak in Bangladesh</h1>
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-      <mat-card class="dashboard-card">
+      <mat-card class="dashboard-card mat-elevation-z0">
         <mat-card-header>
           <mat-card-title>
             {{card.title}}
