--- a/src/app/orbeed-dashboard/orbeed-dashboard.component.scss
+++ b/src/app/orbeed-dashboard/orbeed-dashboard.component.scss
@@ -7,7 +7,7 @@
   top: 15px;
   left: 15px;
   right: 15px;
-  bottom: 15px;
+  bottom: 5px;
   border: 1px solid #485e9029;
   border-radius: 0.25rem;
 }
@@ -16,8 +16,13 @@
   position: absolute;
   top: 5px;
   right: 10px;
+  color: #485e9029;
 }
 
 .dashboard-card-content {
   text-align: center;
+}
+
+.mat-card-title {
+  font-size: 12px;
 }
